--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "koa": "^2.13.0",
     "koa-router": "^10.0.0",
+    "koa-session": "^6.1.0",
     "mysql": "^2.18.1"
   }
 }
