--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "koa": "^2.13.0",
     "koa-router": "^10.0.0",
     "koa-session": "^6.1.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "require-directory": "^2.1.1"
   }
 }
