--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koa-router": "^10.0.0",
     "koa-session": "^6.1.0",
     "mysql": "^2.18.1",
-    "require-directory": "^2.1.1"
+    "require-directory": "^2.1.1",
+    "svg-captcha": "^1.4.0"
   }
 }
