--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "devDependencies": {
     "apidoc": "^0.26.0",
+    "axios": "^0.21.1",
     "http-server": "^0.12.3",
+    "jsdom": "^16.5.3",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.7",
     "npm": "^6.14.11",
