--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/app.js",
-    "test": "mocha ./test/article.test.js",
+    "test": "mocha",
     "api": "apidoc -i ./src/ -o ./apidoc/",
     "doc": "http-server ./apidoc -c-1"
   },
@@ -33,6 +33,7 @@
     "mocha": "^8.2.1",
     "nodemon": "^2.0.7",
     "npm": "^6.14.11",
+    "nyc": "^15.1.0",
     "supertest": "^5.0.0-0"
   }
 }
